style: use Set.of() for PRINCIPAL_CTORS allowlist (Java 21)
Agent-Logs-Url: https://github.com/pfirmstone/JGDMS/sessions/6aaf40fc-1505-4e59-bf44-fdbb0637487b

Co-authored-by: pfirmstone <11625778+pfirmstone@users.noreply.github.com>